--- a/css/components.src.css
+++ b/css/components.src.css
@@ -211,6 +211,7 @@
 @utility user-profile-dropdown {
   @apply absolute right-0 z-10 bg-neutral-primary-medium border border-default-medium rounded-base shadow-lg w-44;
   top: calc(100% + 0.5rem);
+  max-width: calc(100vw - 1rem);
 }
 
 @utility user-profile-dropdown-header {
